--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "GPL-v3-or-later",
   "dependencies": {
+    "html-pdf-chrome": "^0.5.0",
     "openzeppelin-solidity": "https://github.com/OpenZeppelin/openzeppelin-solidity#release-v2.1.0-solc-0.5"
   }
 }
