--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "html-pdf-chrome": "^0.5.0",
     "openzeppelin-solidity": "https://github.com/OpenZeppelin/openzeppelin-solidity#release-v2.1.0-solc-0.5",
     "wkhtmltopdf": "^0.3.4"
+  },
+  "devDependencies": {
+    "eth-gas-reporter": "^0.1.12"
   }
 }
