New architecture for the token in progress.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "truffle test",
     "lintjs": "npx eslint app/js/offline.js app/js/online.js app/js/shared.js migrations/* test/*.js",
     "lintsol": "solium -d contracts",
+    "ethnode": "ganache --port 9545 --chain.chainId 1337 --chain.networkId 1337 --mnemonic 'test test test test test test test test test test test junk'",
     "aesthetic": "node scripts/gen-aesthetic.js",
     "metadata": "node scripts/gen-metadata.js",
     "pdfs": "node scripts/gen-pdfs.js",
