--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "type-opposite-images",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tokens Equal Text's evil twin.",
+  "keywords": [
+    "art",
+    "blockchain"
+  ],
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -17,20 +21,23 @@
     "metadata": "node scripts/gen-metadata.js",
     "pdfs": "node scripts/gen-pdfs.js",
     "pngs": "mogrify -density 160 -format png -quality 90 -gravity Center -crop 60%\\! -path ./images/ ./pdfs/*",
-    "gen": "npm run metadata && npm run pdfs && npm run pngs"
+    "gen": "npm run metadata && npm run pdfs && npm run pngs",
+    "dashboard-mainnet": "truffle dashboard",
+    "deploy-mainnet": "truffle deploy --network dashboard",
+    "flatten": "truffle run stdjsonin TypeOppositeImages && mv ./TypeOppositeImages-input.json ./flattened"
   },
-  "keywords": [],
   "author": "Rhea Myers",
   "license": "GPL-v3-or-later",
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.4"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
     "any-promise": "^1.3.0",
     "bindings": "^1.4.0",
+    "eslint": "^8.31.0",
     "ipfs-http-client": "^29.1.0",
-    "wkhtmltopdf": "^0.3.4",
-    "@openzeppelin/contracts": "^4.7.3",
-    "eslint": "^8.31.0"
+    "truffle-plugin-stdjsonin": "github:mhrsalehi/truffle-plugin-stdjsonin",
+    "wkhtmltopdf": "^0.3.4"
   }
 }
